Fixed alignment issues on containers.

--- a/css/styles.css
+++ b/css/styles.css
@@ -255,12 +255,11 @@ hr {
 /*************************
  * 03. Experience
  *************************/
-
 #experience {
-    height: auto;
-    min-height: 530px;
-    padding: 50px;
+  width: 100%;
+  min-height: 500px;
 }
+
 
 #jpm {
     animation-delay: 0.5s;
@@ -332,6 +331,7 @@ hr {
     height: auto;
     min-height: 530px;
     padding: 50px;
+    width: 100%;
 }
 
 #skillSetOne {
@@ -375,6 +375,7 @@ canvas {
     height: auto;
     min-height: 550px;
     padding: 50px;
+    width: 100%;
 }
 
 .project-item {
@@ -463,6 +464,7 @@ canvas {
     min-height: 400px;
     padding: 50px;
     text-align: center;
+    width: 100%;
 }
 
 #greetingOne {
@@ -498,6 +500,7 @@ canvas {
     min-height: 400px;
     padding: 50px;
     text-align: center;
+    width: 100%;
 }
 
 #locationIcon {
